--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-family: 'Poppins', sans-serif; /* Fonte moderna para o header */
+    font-family: 'Poppins', sans-serif;
 }
 
 header a {
@@ -26,8 +26,30 @@ header a:hover {
     color: #FFD700; /* Alterado para dourado */
 }
 
-h1, h2 {
-    font-family: 'Montserrat', sans-serif; /* Fonte moderna para títulos */
+.language-selector {
+    position: relative;
+    display: inline-block;
+    margin-left: auto;
+}
+
+.language-selector select {
+    padding: 0.5rem 1rem;
+    border: 1px solid #ffffff;
+    border-radius: 5px;
+    background-color: #3A1E68;
+    color: #ffffff;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    appearance: none;
+    outline: none;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+.language-selector select:hover {
+    background-color: #FFD700;
+    color: #1E3A8A;
+    border-color: #FFD700;
 }
 
 .container {
