--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ header a:hover {
     position: absolute;
     width: 50px;
     height: 50px;
-    background: url('path-to-cookie-image.png') no-repeat center center;
+    background: url('Biscuit.png') no-repeat center center;
     background-size: contain;
     animation: fall 5s linear infinite;
 }
