--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ header a:hover {
     position: absolute;
     width: 50px; /* Tamanho do biscoito */
     height: 50px;
-    background-image: url('path-to-cookie-image.png'); /* Substitua pelo caminho da imagem */
+    background-image: url('Biscuit.png'); /* Substitua pelo caminho da imagem */
     background-size: cover;
     background-repeat: no-repeat;
     animation: fall linear, spin infinite linear;
