--- a/styles.css
+++ b/styles.css
@@ -142,6 +142,7 @@ a:hover::after {
     right: -20px;
     top: 0;
     font-size: 20px;
+    color: orange; /* Define a cor para laranja */
     animation: bounce 0.5s infinite;
 }
 
