--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ header {
 a:hover {
     text-decoration: none;
     position: relative;
+    color: orange; /* Cor laranja sempre visível */
 }
 
 a:hover::after {
@@ -142,7 +143,6 @@ a:hover::after {
     right: -20px;
     top: 0;
     font-size: 20px;
-    color: orange; /* Define a cor para laranja */
     animation: bounce 0.5s infinite;
 }
 
