--- a/styles.css
+++ b/styles.css
@@ -22,23 +22,29 @@ header {
     align-items: center;
 }
 
-.logo-container a {
+.logo-link {
+    display: flex;
+    align-items: center;
     text-decoration: none;
-    color: #ffffff;
-    font-weight: bold;
-    font-family: 'Poppins', sans-serif;
-    font-size: 1.2rem;
-    transition: transform 0.2s ease, color 0.2s ease;
-}
-
-.logo-container a:hover {
-    color: #FFD700;
-    transform: scale(1.1);
+    color: inherit;
 }
 
 .header-logo {
     max-width: 40px;
     margin-right: 10px;
+}
+
+.logo-text {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #ffffff;
+}
+
+
+.logo-container:hover {
+    color: #FFD700;
+    transform: scale(1.1);
 }
 
 .center-nav {
