--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,15 @@ header {
 .logo-container {
     display: flex;
     align-items: center;
+    outline: none; /* Remove contornos ao focar */
+    pointer-events: none; /* Impede interação direta */
 }
 
 .header-logo {
     max-width: 40px;
     margin-right: 10px;
+    outline: none; /* Remove contornos ao focar */
+    pointer-events: none; /* Impede interação direta */
 }
 
 .logo-text {
@@ -32,6 +36,8 @@ header {
     font-size: 1.5rem;
     font-weight: bold;
     color: #ffffff;
+    outline: none; /* Remove contornos ao focar */
+    pointer-events: none; /* Impede interação direta */
 }
 
 .center-nav {
