--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,14 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    /*position: relative;*/
     font-family: 'Poppins', sans-serif;
 }
 
 .logo-container {
     display: flex;
     align-items: center;
+    gap: 0.5rem; /* Espaço entre o logotipo e o texto */
 }
 
 .header-logo {
